Refreshed branch cmake_fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,7 +313,7 @@ endif()
 if(USE_LAPACK)
   add_definitions(-DMXNET_USE_LAPACK=1)
   list(APPEND mxnet_LINKER_LIBS lapack)
-else(USE_LAPACK)
+elseif(NOT MSVC)
   # Workaround for Windows until using new Jenkinsfile.
   if(BLAS STREQUAL "Open" OR BLAS STREQUAL "open")
     add_definitions(-DMXNET_USE_LAPACK=1)
@@ -462,6 +462,7 @@ endif()
 if(USE_CUDA)
   if(FIRST_CUDA)
     mshadow_select_nvcc_arch_flags(NVCC_FLAGS_ARCH)
+    message(STATUS " Cuda NVCC flags: ${NVCC_FLAGS_ARCH}")
     string(REPLACE ";" " " NVCC_FLAGS_ARCH "${NVCC_FLAGS_ARCH}")
     set(CMAKE_CUDA_FLAGS "${NVCC_FLAGS_ARCH}")
     set(CMAKE_CUDA_FLAGS_RELEASE "${NVCC_FLAGS_ARCH} -use_fast_math")
